# lego-vpn-android

./: README.md  build.gradle  kestore.jks  kestore_re.jks  legovpn.jks  local.properties
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/release/: app-release.apk
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html  lego.txt  test.html
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/libs/include/: vpn_client.h
app/src/main/java/cn/forward/androids/: CompareRunnable.java  OnStateBtnClickListener.java  PluginListAdapter.java  Priority.java  PriorityRunnable.java  ScaleGestureDetectorApi27.java  SimpleAsyncTask.java  TouchGestureDetector.java
app/src/main/java/cn/forward/androids/Image/: AsyncDrawable.java  ImageCache.java  ImageCacheKeyGenerator.java  ImageLoader.java  ImageLoaderConfig.java  ImageLoaderGroup.java  LocalImagerLoader.java
app/src/main/java/cn/forward/androids/utils/: AnimatorUtil.java  ColorUtil.java  DateUtil.java  EllipsizeUtils.java  ImageUtils.java  LogUtil.java  ProcessUtil.java  ReflectUtil.java  StatusBarUtil.java  ThreadUtil.java  Util.java  ViewUtil.java
app/src/main/java/cn/forward/androids/utils/cache/: DiskLruCache.java  DiskLruUtil.java  StrictLineReader.java
app/src/main/java/cn/forward/androids/views/: BitmapScrollPicker.java  DragListView.java  EasyAdapter.java  KeyboardLayout.java  MaskImageView.java  PaddingImageView.java  PaddingTextView.java  PaddingViewAttrs.java  RatioImageView.java  RoundProgressBar.java  SFrameLayout.java  SLinearLayout.java  SRelativeLayout.java  STextView.java  ScrollPickerView.java  SelectorAttrs.java  ShapeImageView.java  StringScrollPicker.java
app/src/main/java/com/google/android/gms/wallet/: Constants.java  ItemInfo.java  PaymentsUtil.java
app/src/main/java/com/vm/shadowsocks/core/: AppInfo.java  AppProxyManager.java  ChinaIpMaskManager.java  DnsProxy.java  HttpHostHeaderParser.java  LocalVpnService.java  NatSession.java  NatSessionManager.java  ProxyConfig.java  TcpProxyServer.java  TunnelFactory.java
app/src/main/java/com/vm/shadowsocks/dns/: DnsFlags.java  DnsHeader.java  DnsPacket.java  Question.java  Resource.java  ResourcePointer.java
app/src/main/java/com/vm/shadowsocks/tcpip/: CommonMethods.java  IPHeader.java  TCPHeader.java  UDPHeader.java
app/src/main/java/com/vm/shadowsocks/tunnel/: Config.java  RawTunnel.java  Tunnel.java
app/src/main/java/com/vm/shadowsocks/tunnel/httpconnect/: HttpConnectConfig.java  HttpConnectTunnel.java
app/src/main/java/com/vm/shadowsocks/tunnel/shadowsocks/: AesCrypt.java  BlowFishCrypt.java  CamelliaCrypt.java  Chacha20Crypt.java  CryptBase.java  CryptFactory.java  ICrypt.java  Rc4Md5Crypt.java  SeedCrypt.java  ShadowSocksKey.java  ShadowsocksConfig.java  ShadowsocksTunnel.java
app/src/main/java/com/vm/shadowsocks/ui/: AppManager.java  CustomAdapter.java  MainActivity.java  MyAdapter.java  P2pLibManager.java  SimpleTableDataAdapter.java  SimpleTableHeaderAdapter.java  SortStateViewProviders.java  TableDataRowBackgroundProviders.java
app/src/main/res/anim/: tip.xml
app/src/main/res/drawable/: btn_bg_normal.xml  country_back.xml  googlepay_button_no_shadow_background.xml  switch_custom_thumb_off.xml  switch_custom_thumb_on.xml
app/src/main/res/layout/: activity_main.xml  array_adapter.xml  layout_apps.xml  layout_apps_item.xml
app/src/main/res/layout-xxhdpi/: activity_checkout.xml  activity_main.xml  array_adapter.xml  custom_spinner_row.xml  dialog_layout.xml  link_web.xml  pay.xml  title_layout.xml  upgrade.xml
app/src/main/res/menu/: main_activity_actions.xml
app/src/main/res/raw/: config
app/src/main/res/values/: attrs.xml  color.xml  strings.xml  styles.xml
app/src/main/res/values-v11/: styles.xml
app/src/main/res/values-v14/: styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
